# ProcessParallelization

./: CMakeLists.txt  README.md  vcpkg.json
ProcessParallelization/: CMakeLists.txt  Source.cpp
Testing/: CMakeLists.txt  Tests.cpp
cmake/: LoadGoogleTests.cmake
include/: CMakeLists.txt  ProcessParallelization.ixx
